--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOu6L/KQYCD0r36bqkFQcCB"
+      "authorship_tag": "ABX9TyOI+1u93rWQ4qRs7bR9u8N2"
     },
     "kernelspec": {
       "name": "python3",
@@ -489,6 +489,9 @@
         "1. https://machinelearningmastery.com/tactics-to-combat-imbalanced-classes-in-your-machine-learning-dataset/#:~:text=Imbalanced%20data%20typically%20refers%20to,with%20100%20instances%20(rows).\n",
         "\n",
         "2. https://www.kaggle.com/janiobachmann/credit-fraud-dealing-with-imbalanced-datasets/notebook\n",
+        "\n",
+        "\n",
+        "Below there are the approaches\n",
         "\n"
       ]
     },
@@ -498,9 +501,8 @@
         "id": "uY7EKEnZOhRg"
       },
       "source": [
-        "Approaches:\n",
-        "\n",
-        "1. Create the model with two different algorithms to see the performance with the data as it is\n",
+        "### 1. Model with Different Algorithms\n",
+        "Create the model with two different algorithms to see the performance with the data as it is\n",
         "\n",
         "  Will evaluate the models with MSE and F1 score\n",
         "\n",
@@ -993,7 +995,9 @@
         "id": "cJLsyu7xPJ0M"
       },
       "source": [
-        "2. Oversampling the dataset using the Imbalance learn library\n",
+        "###2. Oversampling of the Dataset \n",
+        "\n",
+        "Using the Imbalance learn library to use various method to oversample\n",
         "\n",
         "Reference:\n",
         "\n",
@@ -1010,7 +1014,58 @@
         "id": "TWeoWF3qOuMW"
       },
       "source": [
-        ""
+        "# Oversampling of the dataset randomly \n",
+        "\n",
+        "def oversample(test):\n",
+        "  x_test = test.loc[:, test.columns != 'Class']\n",
+        "  y_test = test[\"Class\"]\n",
+        "  oversampler = imblearn.over_sampling.RandomOverSampler(random_state=0)\n",
+        "  new_x_test, new_y_test = oversampler.fit_resample(x_test, y_test)\n",
+        "  df = new_x_test\n",
+        "  df[\"Class\"] = new_y_test\n",
+        "  return df\n",
+        "\n",
+        "oversample_train_set = oversample(train_set)\n"
+      ],
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sGT5My0WaMuQ",
+        "outputId": "683f4c08-efbc-42d5-b25c-28be2fd183b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "source": [
+        "model_3 = random_forest_classifier(oversample_train_set, validation_set)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training set score  0.9999495910574536\n",
+            "F1 training set score  0.999949593598387\n",
+            "MSE training set score  5.040894254640773e-05\n",
+            "validation set score  0.9995219885277247\n",
+            "F1 training set score  0.8455284552845528\n",
+            "MSE training set score  0.0004780114722753346\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dlVq9eWsaVEB"
+      },
+      "source": [
+        "model_4 = svm(oversample_train_set, validation_set)"
       ],
       "execution_count": null,
       "outputs": []
