Under sampling models

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4xHwBcDpNNHJ+5N6r/x3s"
+      "authorship_tag": "ABX9TyOSSwdrdtd8oTjeTlh1s7n1"
     },
     "kernelspec": {
       "name": "python3",
@@ -1138,7 +1138,7 @@
         "id": "xY-8fLBSlVax"
       },
       "source": [
-        "The result shows that the random sampling improves the F1 test set score to about 100% but the validation set F1 score is lower than the base model"
+        "The result shows that the random sampling improves the F1 test set score to about 100% but the validation set F1 score is lower 81% than the base model 83%"
       ]
     },
     {
@@ -1155,6 +1155,437 @@
       "cell_type": "code",
       "metadata": {
         "id": "6ZJ-ZGXm3cWW"
+      },
+      "source": [
+        "# undersampling of the dataset with Cluster Centroids \n",
+        "\n",
+        "def undersample_random(test):\n",
+        "  x_test = test.loc[:, test.columns != 'Class']\n",
+        "  y_test = test[\"Class\"]\n",
+        "  undersampler = imblearn.under_sampling.ClusterCentroids(random_state=0)\n",
+        "  new_x_test, new_y_test = undersampler.fit_resample(x_test, y_test)\n",
+        "  df = new_x_test\n",
+        "  df[\"Class\"] = new_y_test\n",
+        "  return df\n",
+        "\n",
+        "undersample_random_train_set = undersample_random(train_set)"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "96ap0dLL5Sy1",
+        "outputId": "0db2ccf0-ab91-401f-d926-f01b306a2095",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 427
+        }
+      },
+      "source": [
+        "undersample_random_train_set"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>V1</th>\n",
+              "      <th>V4</th>\n",
+              "      <th>V5</th>\n",
+              "      <th>V7</th>\n",
+              "      <th>V8</th>\n",
+              "      <th>V9</th>\n",
+              "      <th>V10</th>\n",
+              "      <th>V13</th>\n",
+              "      <th>V14</th>\n",
+              "      <th>V16</th>\n",
+              "      <th>V20</th>\n",
+              "      <th>V21</th>\n",
+              "      <th>V22</th>\n",
+              "      <th>V24</th>\n",
+              "      <th>V27</th>\n",
+              "      <th>V28</th>\n",
+              "      <th>Amount</th>\n",
+              "      <th>Class</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.529512</td>\n",
+              "      <td>0.459757</td>\n",
+              "      <td>-0.104006</td>\n",
+              "      <td>-0.246517</td>\n",
+              "      <td>0.020092</td>\n",
+              "      <td>0.620889</td>\n",
+              "      <td>-0.096285</td>\n",
+              "      <td>-0.100765</td>\n",
+              "      <td>0.086032</td>\n",
+              "      <td>-0.164478</td>\n",
+              "      <td>-0.160788</td>\n",
+              "      <td>-0.061642</td>\n",
+              "      <td>-0.035527</td>\n",
+              "      <td>0.037715</td>\n",
+              "      <td>-0.008093</td>\n",
+              "      <td>-0.015416</td>\n",
+              "      <td>28.912886</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-1.811613</td>\n",
+              "      <td>0.523180</td>\n",
+              "      <td>-2.822458</td>\n",
+              "      <td>2.619627</td>\n",
+              "      <td>-0.297742</td>\n",
+              "      <td>-0.354216</td>\n",
+              "      <td>-0.771714</td>\n",
+              "      <td>-0.160478</td>\n",
+              "      <td>0.185970</td>\n",
+              "      <td>0.039664</td>\n",
+              "      <td>1.490858</td>\n",
+              "      <td>0.378613</td>\n",
+              "      <td>-0.269425</td>\n",
+              "      <td>-0.111635</td>\n",
+              "      <td>-0.052501</td>\n",
+              "      <td>-0.016139</td>\n",
+              "      <td>1267.679388</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0.619164</td>\n",
+              "      <td>-0.031784</td>\n",
+              "      <td>-0.726452</td>\n",
+              "      <td>0.586349</td>\n",
+              "      <td>-0.226553</td>\n",
+              "      <td>0.039564</td>\n",
+              "      <td>-0.289528</td>\n",
+              "      <td>-0.054067</td>\n",
+              "      <td>-0.015248</td>\n",
+              "      <td>-0.269958</td>\n",
+              "      <td>0.411423</td>\n",
+              "      <td>0.191315</td>\n",
+              "      <td>0.056655</td>\n",
+              "      <td>-0.048664</td>\n",
+              "      <td>-0.031753</td>\n",
+              "      <td>0.036311</td>\n",
+              "      <td>448.502095</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-5.675999</td>\n",
+              "      <td>2.638208</td>\n",
+              "      <td>-6.613113</td>\n",
+              "      <td>7.938201</td>\n",
+              "      <td>-1.663480</td>\n",
+              "      <td>-1.429914</td>\n",
+              "      <td>-1.656264</td>\n",
+              "      <td>-0.088290</td>\n",
+              "      <td>0.838935</td>\n",
+              "      <td>0.719063</td>\n",
+              "      <td>6.087304</td>\n",
+              "      <td>2.273467</td>\n",
+              "      <td>-1.240901</td>\n",
+              "      <td>0.203448</td>\n",
+              "      <td>-0.220629</td>\n",
+              "      <td>0.354152</td>\n",
+              "      <td>3827.405714</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.202329</td>\n",
+              "      <td>-0.353193</td>\n",
+              "      <td>-0.393739</td>\n",
+              "      <td>-0.177161</td>\n",
+              "      <td>0.043438</td>\n",
+              "      <td>-0.254735</td>\n",
+              "      <td>0.175428</td>\n",
+              "      <td>0.046602</td>\n",
+              "      <td>0.007175</td>\n",
+              "      <td>-0.118967</td>\n",
+              "      <td>0.026236</td>\n",
+              "      <td>-0.002637</td>\n",
+              "      <td>0.083223</td>\n",
+              "      <td>-0.040509</td>\n",
+              "      <td>-0.002165</td>\n",
+              "      <td>-0.007867</td>\n",
+              "      <td>154.320212</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>551</th>\n",
+              "      <td>1.917827</td>\n",
+              "      <td>3.833998</td>\n",
+              "      <td>1.668192</td>\n",
+              "      <td>0.232463</td>\n",
+              "      <td>0.107941</td>\n",
+              "      <td>-1.143646</td>\n",
+              "      <td>0.541699</td>\n",
+              "      <td>0.709148</td>\n",
+              "      <td>-2.420716</td>\n",
+              "      <td>1.506696</td>\n",
+              "      <td>-0.115922</td>\n",
+              "      <td>0.015255</td>\n",
+              "      <td>0.239994</td>\n",
+              "      <td>-0.380576</td>\n",
+              "      <td>-0.005823</td>\n",
+              "      <td>-0.012105</td>\n",
+              "      <td>9.210000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>552</th>\n",
+              "      <td>-0.769172</td>\n",
+              "      <td>-0.151513</td>\n",
+              "      <td>-0.648374</td>\n",
+              "      <td>-1.706658</td>\n",
+              "      <td>0.313745</td>\n",
+              "      <td>-1.982302</td>\n",
+              "      <td>-3.158127</td>\n",
+              "      <td>1.247647</td>\n",
+              "      <td>-6.393373</td>\n",
+              "      <td>-3.258046</td>\n",
+              "      <td>-0.102294</td>\n",
+              "      <td>-0.036122</td>\n",
+              "      <td>-0.753591</td>\n",
+              "      <td>0.358493</td>\n",
+              "      <td>0.250531</td>\n",
+              "      <td>0.250987</td>\n",
+              "      <td>40.000000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>553</th>\n",
+              "      <td>-1.585505</td>\n",
+              "      <td>2.357096</td>\n",
+              "      <td>-1.405043</td>\n",
+              "      <td>-3.513687</td>\n",
+              "      <td>1.515607</td>\n",
+              "      <td>-1.207166</td>\n",
+              "      <td>-6.234561</td>\n",
+              "      <td>1.361193</td>\n",
+              "      <td>-6.608068</td>\n",
+              "      <td>-2.602478</td>\n",
+              "      <td>0.315957</td>\n",
+              "      <td>0.501543</td>\n",
+              "      <td>-0.546869</td>\n",
+              "      <td>-0.425550</td>\n",
+              "      <td>0.264028</td>\n",
+              "      <td>0.132817</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>554</th>\n",
+              "      <td>-6.003422</td>\n",
+              "      <td>1.714669</td>\n",
+              "      <td>3.414667</td>\n",
+              "      <td>-1.901512</td>\n",
+              "      <td>-2.746111</td>\n",
+              "      <td>0.887673</td>\n",
+              "      <td>-0.049233</td>\n",
+              "      <td>-1.894796</td>\n",
+              "      <td>-0.831483</td>\n",
+              "      <td>1.188907</td>\n",
+              "      <td>-4.128186</td>\n",
+              "      <td>1.101671</td>\n",
+              "      <td>-0.992494</td>\n",
+              "      <td>0.139898</td>\n",
+              "      <td>1.775378</td>\n",
+              "      <td>-0.104285</td>\n",
+              "      <td>311.910000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>555</th>\n",
+              "      <td>-3.843009</td>\n",
+              "      <td>6.136378</td>\n",
+              "      <td>2.797195</td>\n",
+              "      <td>-1.668931</td>\n",
+              "      <td>-2.617552</td>\n",
+              "      <td>-3.945843</td>\n",
+              "      <td>-4.565252</td>\n",
+              "      <td>-0.965693</td>\n",
+              "      <td>-10.904459</td>\n",
+              "      <td>-1.139754</td>\n",
+              "      <td>0.054796</td>\n",
+              "      <td>-1.277812</td>\n",
+              "      <td>0.719652</td>\n",
+              "      <td>-0.258094</td>\n",
+              "      <td>0.739383</td>\n",
+              "      <td>-0.203050</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>556 rows × 18 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           V1        V4        V5  ...       V28       Amount  Class\n",
+              "0    1.529512  0.459757 -0.104006  ... -0.015416    28.912886      0\n",
+              "1   -1.811613  0.523180 -2.822458  ... -0.016139  1267.679388      0\n",
+              "2   -0.619164 -0.031784 -0.726452  ...  0.036311   448.502095      0\n",
+              "3   -5.675999  2.638208 -6.613113  ...  0.354152  3827.405714      0\n",
+              "4    0.202329 -0.353193 -0.393739  ... -0.007867   154.320212      0\n",
+              "..        ...       ...       ...  ...       ...          ...    ...\n",
+              "551  1.917827  3.833998  1.668192  ... -0.012105     9.210000      1\n",
+              "552 -0.769172 -0.151513 -0.648374  ...  0.250987    40.000000      1\n",
+              "553 -1.585505  2.357096 -1.405043  ...  0.132817     1.000000      1\n",
+              "554 -6.003422  1.714669  3.414667  ... -0.104285   311.910000      1\n",
+              "555 -3.843009  6.136378  2.797195  ... -0.203050     1.000000      1\n",
+              "\n",
+              "[556 rows x 18 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PsGkydff4dbO",
+        "outputId": "519321f4-31b2-47e5-ae62-ce5f4237cbc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "source": [
+        "def random_forest_classifier_undersample(test, validation):\n",
+        "  x_test = test.loc[:, test.columns != 'Class']\n",
+        "  y_test = test[\"Class\"]\n",
+        "  x_val = validation.loc[:, validation.columns != 'Class']\n",
+        "  y_val = validation[\"Class\"]\n",
+        "  model= RandomForestClassifier(n_estimators=500, max_depth=400, max_samples=300)\n",
+        "  model.fit(x_test, y_test)\n",
+        "\n",
+        "  test_prediction = model.predict(x_test)\n",
+        "  print(\"training set score \", model.score(x_test, y_test))\n",
+        "  f1_score_test = f1_score(y_test, test_prediction)\n",
+        "  print(\"F1 training set score \", f1_score_test)\n",
+        "  mse_test = mean_squared_error(y_test, test_prediction)\n",
+        "  print(\"MSE training set score \", mse_test)\n",
+        "\n",
+        "\n",
+        "  validation_prediction = model.predict(x_val)\n",
+        "  print(\"validation set score \", model.score(x_val, y_val))\n",
+        "  f1_score_validation = f1_score(y_val, validation_prediction)\n",
+        "  print(\"F1 training set score \", f1_score_validation)\n",
+        "  mse_validation = mean_squared_error(y_val, validation_prediction)\n",
+        "  print(\"MSE training set score \", mse_validation)\n",
+        "  return model\n",
+        "\n",
+        "model_7 = random_forest_classifier_undersample(undersample_random_train_set, validation_set)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training set score  0.9964028776978417\n",
+            "F1 training set score  0.9964028776978417\n",
+            "MSE training set score  0.0035971223021582736\n",
+            "validation set score  0.6479571299184864\n",
+            "F1 training set score  0.009485382600693707\n",
+            "MSE training set score  0.3520428700815135\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2JbR4hno4mDz",
+        "outputId": "39a1ae56-201b-486e-f483-3be0c89956f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "source": [
+        "model_8 = svm(undersample_random_train_set, validation_set)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training set score  0.9622302158273381\n",
+            "F1 training set score  0.9610389610389611\n",
+            "MSE training set score  0.03776978417266187\n",
+            "validation set score  0.9320972124383616\n",
+            "F1 training set score  0.04595263343937788\n",
+            "MSE training set score  0.06790278756163833\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5DufgVmF59-2"
+      },
+      "source": [
+        "Undersampling has much worst F1 score than the oversampling and the normal dataset result"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EbyTZnAH6SRJ"
       },
       "source": [
         ""
