Test set accuracy 82%

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSSwdrdtd8oTjeTlh1s7n1"
+      "authorship_tag": "ABX9TyOhH3nI2r/1nwEc8gA7pwYR"
     },
     "kernelspec": {
       "name": "python3",
@@ -1579,7 +1579,99 @@
         "id": "5DufgVmF59-2"
       },
       "source": [
-        "Undersampling has much worst F1 score than the oversampling and the normal dataset result"
+        "Undersampling has much worst validation F1 score than the oversampling and the normal dataset result, that is most probabaly because the data sample is much lower which is not helping the model to fit"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vh8c-LyT8lBB"
+      },
+      "source": [
+        "## Testing the Best Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "op3--KXp8stn"
+      },
+      "source": [
+        "The best model is the random forest with the normal dataset without oversampling and undersampling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYgQAWNH_DgA",
+        "outputId": "2fc6aa45-524a-474b-d0e5-4794933af976",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "source": [
+        "model_1 = random_forest_classifier(train_set, validation_set)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training set score  0.9996980904219186\n",
+            "F1 training set score  0.90625\n",
+            "MSE training set score  0.0003019095780813646\n",
+            "validation set score  0.9994465130321022\n",
+            "F1 training set score  0.835820895522388\n",
+            "MSE training set score  0.0005534869678977558\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ww-5AeZ882Tm",
+        "outputId": "4de38f48-6141-45d7-80e7-adba99025303",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        }
+      },
+      "source": [
+        "# calculation of the score for the model_1 with test dataset\n",
+        "\n",
+        "x_test = test_df.loc[:, test_df.columns != 'Class']\n",
+        "y_test = test_df[\"Class\"]\n",
+        "\n",
+        "test_prediction = model_1.predict(x_test)\n",
+        "print(\"Test set score \", model_1.score(x_test, y_test))\n",
+        "f1_score_test = f1_score(y_test, test_prediction)\n",
+        "print(\"F1 Test set score \", f1_score_test)\n",
+        "mse_test = mean_squared_error(y_test, test_prediction)\n",
+        "print(\"MSE Test set score \", mse_test)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test set score  0.9995201479348805\n",
+            "F1 Test set score  0.8240343347639486\n",
+            "MSE Test set score  0.00047985206511943633\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k7mSMmqwArRe"
+      },
+      "source": [
+        "The test score for the model is 82%"
       ]
     },
     {
