Generalizzation of the models

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,8 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhH3nI2r/1nwEc8gA7pwYR"
+      "authorship_tag": "ABX9TyNRemISVIyVCShtv+6anNuh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kamuma03/Fraud-Detection-Project/blob/main/Fraud_Detection_Model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -1640,7 +1651,7 @@
         }
       },
       "source": [
-        "# calculation of the score for the model_1 with test dataset\n",
+        "# calculation of the test datset score for the model_1 \n",
         "\n",
         "x_test = test_df.loc[:, test_df.columns != 'Class']\n",
         "y_test = test_df[\"Class\"]\n",
@@ -1677,7 +1688,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EbyTZnAH6SRJ"
+        "id": "EbyTZnAH6SRJ",
+        "outputId": "90065938-5aaf-40f3-c5fc-4e0e36fa425e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        }
+      },
+      "source": [
+        "# calculation of the test dataset score for the model_5 random forrest with oversampling of the training set\n",
+        "\n",
+        "x_test = test_df.loc[:, test_df.columns != 'Class']\n",
+        "y_test = test_df[\"Class\"]\n",
+        "\n",
+        "test_prediction = model_5.predict(x_test)\n",
+        "print(\"Test set score \", model_5.score(x_test, y_test))\n",
+        "f1_score_test = f1_score(y_test, test_prediction)\n",
+        "print(\"F1 Test set score \", f1_score_test)\n",
+        "mse_test = mean_squared_error(y_test, test_prediction)\n",
+        "print(\"MSE Test set score \", mse_test)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test set score  0.999403110845827\n",
+            "F1 Test set score  0.8030888030888031\n",
+            "MSE Test set score  0.0005968891541729574\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WDvnaViPB2nY"
+      },
+      "source": [
+        "In this case the test set accuracy is 80% so model_1 with standard dataset is able to generalize better "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "htmEKYXBB2Ei"
       },
       "source": [
         ""
