Added some comments

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNRemISVIyVCShtv+6anNuh",
+      "authorship_tag": "ABX9TyMY30hDUwpxnp5AH+kHzm9q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
       "source": [
         "pip install -U imbalanced-learn"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import imblearn"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         "train_df\n",
         "test_df"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,6 +491,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ZWjroXq6OIsU"
+      },
+      "source": [
+        "## Evaluation matrix\n",
+        "\n",
+        "Reference: https://machinelearningmastery.com/classification-accuracy-is-not-enough-more-performance-measures-you-can-use/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CAIEzRhlONdW"
+      },
+      "source": [
+        "1. Accuracy of the model, it is misleading because especially for the unbalance dataset it can cause the Acuracy paradox https://en.wikipedia.org/wiki/Accuracy_paradox\n",
+        "\n",
+        "2. F1 Score is the 2*((precision*recall)/(precision+recall)), the F1 score conveys the balance between the precision and the recal. Where precision is the number of True Positives divided by the number of True Positives and False Positives. And recall is the number of True Positives divided by the number of True Positives and the number of False Negatives.\n",
+        "the F1 Score is used to select a model based on a balance between precision and recall\n",
+        "3. The mean square error (MSE), is computed by finding the difference at every point between the prediction and label, squaring the difference, then taking the mean of all those square differences. The MSE it is intresting in how much the prediction deviates from the label, but again looks like not is a good measure for an unbalanced dataset as shown in the below calculation for the models\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ob0M2T_R51W8"
       },
       "source": [
@@ -537,7 +562,7 @@
         "\n",
         "validation_set"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -895,7 +920,7 @@
         "  print(\"MSE training set score \", mse_validation)\n",
         "  return model"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +936,7 @@
       "source": [
         "model_1 = random_forest_classifier(train_set, validation_set)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +982,7 @@
         "  print(\"MSE training set score \", mse_validation)\n",
         "  return model"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,7 +998,7 @@
       "source": [
         "model_2 = svm(train_set, validation_set)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1041,9 @@
         "\n",
         "https://imbalanced-learn.org/stable/index.html\n",
         "\n",
-        "\n"
+        "The oversampling methodology is to generate new samples in the classes which are under-represented and there are various methodology to do it like: \n",
+        "- Generate new samples by randomly sampling with replacement the current available sample\n",
+        "- Generate new samples in by interpolation, however the samples used to interpolate/generate new synthetic samples differs,  ADASYN focuses on generating samples next to the original samples which are wrongly classified using a k-Nearest Neighbors classifier while the basic implementation of SMOTE will not make any distinction between easy and hard samples to be classified using the nearest neighbors rule. Therefore, the decision function found during training will be different among the algorithms.\n"
       ]
     },
     {
@@ -1038,7 +1065,7 @@
         "\n",
         "oversample_train_set = oversample_random(train_set)\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1081,7 @@
       "source": [
         "model_3 = random_forest_classifier(oversample_train_set, validation_set)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1127,7 @@
         "\n",
         "oversample_svm_train_set = oversample_smote_svm(train_set)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1116,7 +1143,7 @@
       "source": [
         "model_5 = random_forest_classifier(oversample_svm_train_set, validation_set)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,7 +1186,11 @@
       },
       "source": [
         "### 3. Undersampling of the Dataset\n",
-        "\n"
+        "\n",
+        "The algorithm  will generate a new set S' where |S'| < |S| and S' \\not\\subset\n",
+        "S. In other words, prototype generation technique will reduce the number of samples in the targeted classes but the remaining samples are generated — and not selected — from the original set.\n",
+        "ClusterCentroids used below makes use of K-means to reduce the number of samples. Therefore, each class will be synthesized with the centroids of the K-means method instead of the original samples.\n",
+        "The sample size of the dataset in this case is much smaller than the oversampling which causes the reduction of the model generalizzation so the result are much worst than the other two methodology\n"
       ]
     },
     {
@@ -1181,7 +1212,7 @@
         "\n",
         "undersample_random_train_set = undersample_random(train_set)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,7 +1228,7 @@
       "source": [
         "undersample_random_train_set"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1539,7 +1570,7 @@
         "\n",
         "model_7 = random_forest_classifier_undersample(undersample_random_train_set, validation_set)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1599,7 @@
       "source": [
         "model_8 = svm(undersample_random_train_set, validation_set)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1624,7 +1655,7 @@
       "source": [
         "model_1 = random_forest_classifier(train_set, validation_set)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,7 +1694,7 @@
         "mse_test = mean_squared_error(y_test, test_prediction)\n",
         "print(\"MSE Test set score \", mse_test)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1708,7 +1739,7 @@
         "mse_test = mean_squared_error(y_test, test_prediction)\n",
         "print(\"MSE Test set score \", mse_test)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
